--- a/template/pom.template
+++ b/template/pom.template
@@ -4,41 +4,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+	
+    <modelVersion>{{mainContent.modelVersion.name}}</modelVersion>
+	<groupId>{{mainContent.projectGroupId.projectGroup}}</groupId>
+	<artifactId>{{mainContent.projectId.name}}</artifactId>
+	<version>{{mainContent.projectVersion.version}}</version>
 
-	<groupId>isa</groupId>
-	<artifactId>AvioTickets</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
-	<name>AvioTickets</name>
-	<description>Project  for reservation avio tickets</description>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.0.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+	<packaging>{{additionalContent.projectArchive.package}}</packaging>
+	<name>{{additionalContent.projectName.name}}</name>
+	<description>{{additionalContent.description.name}}</description>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<querydsl.version>2.5.0</querydsl.version>
+        {% for property in additionalContent.pomProperties %}
+
+		<{{property.key}}>{{property.value}}</{{property.key}}>
+		
+        {% endfor %}
 	</properties>
 
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -49,61 +35,8 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-	      <groupId>org.springframework.boot</groupId>
-	      <artifactId>spring-boot-starter-security</artifactId>
-	    </dependency>
-	    <dependency>
-	      <groupId>io.jsonwebtoken</groupId>
-	      <artifactId>jjwt</artifactId>
-   		  <version>0.9.1</version>
-	    </dependency>
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-
-		
-		<dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <scope>provided</scope>
-		</dependency>
-		
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-mail</artifactId>
-		    <version>2.0.1.RELEASE</version>
-		</dependency>
 		
 
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			
-			<plugin>
-		      <groupId>org.projectlombok</groupId>
-		      <artifactId>lombok-maven-plugin</artifactId>
-		      <version>1.16.8.0</version>
-		      <executions>
-		        <execution>
-		          <phase>generate-sources</phase>
-		          <goals>
-		            <goal>delombok</goal>
-		          </goals>
-		        </execution>
-		      </executions>
-		    </plugin>
-		</plugins>
-	</build>
-
 
 </project>
