application.properties file generated, closed #2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:/Users/JOVAN/Desktop/JSD/env/Scripts/python.exe"
+    "python.pythonPath": "C:/Users/JOVAN/Desktop/JSD/env/Scripts/python.exe",
+    "java.configuration.updateBuildConfiguration": "disabled"
 }
