--- a/template/properties.template
+++ b/template/properties.template
@@ -1,4 +1,4 @@
-//Generated from jinja template
+//Generated from properties.template
 
 spring.datasource.url = {{propertiesContent.urlParam.databaseURL}}
 spring.datasource.username = {{propertiesContent.username.databaseUsername}}
